DTSPB-4434 Fix tests